# colabdrive

./: .dependencies.json  README.md  cleanup_cloud_credentials.sh  client_secrets.json  privacy_policy.md  pyproject.toml  requirements.txt  setup_cloud_credentials.sh
colabdrive/: auth_helper.py  background_tasks.py  cloud_storage.py  colab_launcher.ipynb  config.py  drive_operations.py  file_operations.py  logger.py  main.py  model_management.py  model_operations.py  ui.py
colabdrive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: google_cloud_setup.md  requirement.txt
docs/prd/: 20241201165630.json
docs/system_design/: 20241201165630.json
docs/task/: 20241201165630.json
resources/competitive_analysis/: 20241201165630.mmd
resources/data_api_design/: 20241201165630.mmd
resources/prd/: 20241201165630.md
resources/seq_flow/: 20241201165630.mmd
resources/system_design/: 20241201165630.md
utiliterean_colab_gradio/: cloud_storage.py  colab_launcher.ipynb  drive_operations.py  file_operations.py  main.py  model_management.py  model_operations.py  ui.py
