[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colabdrive"
version = "0.1.0"
authors = [
  { name="Eren Devrimci", email="eren.devrimci@example.com" },
]
description = "A tool for managing Google Drive operations in Google Colab"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "google-colab",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "boto3",
    "dropbox",
    "gradio",
]

[project.urls]
"Homepage" = "https://github.com/erendevrimci/colabdrive"
"Bug Tracker" = "https://github.com/erendevrimci/colabdrive/issues"
