[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["colabdrive"]

[project]
name = "colabdrive"
version = "0.2.0"
authors = [
  { name="Eren Devrimci", email="eren.devrimci@example.com" },
]
description = "A tool for managing Google Drive operations in Google Colab"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "google-auth",
    "google-auth-oauthlib", 
    "google-auth-httplib2",
    "google-api-python-client",
    "boto3",
    "dropbox",
    "gradio",
    "huggingface-hub",
    "GitPython",
    "requests",
    "PyDrive",
    "typing-extensions>=4.0.0",
    "python-dotenv>=0.19.0"
]

[project.optional-dependencies]
colab = [
    "google-colab",
]

[project.urls]
"Homepage" = "https://github.com/erendevrimci/colabdrive"
"Bug Tracker" = "https://github.com/erendevrimci/colabdrive/issues"
